# dreaming-memory-pipeline

./: .gitignore  README.md  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md  LLM_DESIGN.md  SPECIFICATION.md
src/dreaming/: __init__.py  chunker.py  models.py  pipeline.py  setup.py  synthesizer.py
src/dreaming/llm/: __init__.py  api.py  base.py  interface.py  local.py
src/dreaming/storage/: __init__.py  base.py  json_backend.py
tests/: conftest.py  test_parsing.py  test_pipeline_versioning.py
